<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:id="@+id/login"
    tools:context=".SignInFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:id="@+id/logo"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        />

    <RelativeLayout
        android:id="@+id/credentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logo"
        >
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/userName" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:layout_below="@+id/userName" />
    </RelativeLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/credentials"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:id="@+id/sign_in"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_password"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:layout_below="@+id/sign_in"
            android:clickable="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:linksClickable="false"
            android:textIsSelectable="false"
            android:textColorLink="#ffffff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:id="@+id/sign_up"
            android:layout_toRightOf="@id/sign_in"/>

    </RelativeLayout>

</RelativeLayout>
